--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Rémy Pignel"
+title                    : "Rémy P."
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Rémy P."
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://rpignel.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "rpignel/rpignel.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
