--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/rpignel/"
+  linkedin         : "rpignel"
   orcid            : 
   pinterest        :
   soundcloud       :
